fix(css): resolve table alignment issue

--- a/src/components/common/form-elements/form-elements.css
+++ b/src/components/common/form-elements/form-elements.css
@@ -124,7 +124,6 @@ path.two {
   align-items: center; 
   gap:24px;
   width:100%; 
-  border:1px solid red;
 } 
 
 .btn-detail {
